# auth

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Dockerfile  Justfile  LICENSE  README.md  rustfmt.toml  tombi.toml
.github/workflows/: docker-publish.yml  rust-clippy.yml
assets/templates/mails/: register.html
auth/: Cargo.toml
auth/src/: init.rs  main.rs  routers.rs  state.rs
auth/src/domain/: mod.rs  permission.rs  role.rs  user_role.rs  user_settings.rs  users.rs
auth/src/features/: assets.rs  mod.rs
auth/src/features/actions/: mod.rs  reset_password.rs  verify_email.rs
auth/src/features/api/: mod.rs
auth/src/features/api/v1/: mod.rs
auth/src/features/api/v1/auth/: forget_password.rs  login.rs  logout.rs  mod.rs  register.rs  reset_password.rs  verify_email.rs
auth/src/features/api/v1/common/: mod.rs  not_found.rs  ping.rs
auth/src/features/api/v1/users/: delete.rs  info.rs  mod.rs  setting.rs  update.rs
auth/src/infra/: mailer.rs  mod.rs  session.rs
auth/src/infra/config/: common.rs  mod.rs
auth/src/infra/config/structure/: cache.rs  common.rs  mod.rs  redis.rs  secure.rs
auth/src/infra/database/: error.rs  init.rs  mod.rs
auth/src/infra/database/entity/: permission.rs  role.rs  user_info.rs  user_settings.rs  users.rs
auth/src/infra/database/migration/: m20241201_000000_add_userinfo.rs  m20250709_000000_create_permission_role.rs  m20260311_010000_add_audit_columns.rs
auth/src/infra/http/: mod.rs  response.rs
auth/src/infra/http/extractor/: guest.rs  json.rs  login.rs  operator.rs
auth/src/infra/http/middleware/: permission.rs
auth/src/infra/http/serializer/: common.rs
auth/src/infra/http/utils/: content_type.rs
auth/src/infra/logger/: mod.rs  visitor.rs
auth/src/internal/: error.rs  mail.rs  mod.rs
auth/src/internal/config/: common.rs  mod.rs
auth/src/internal/config/structure/: common.rs  database.rs  secure.rs
auth/src/internal/log/: layer.rs
auth/src/internal/session/: service.rs
auth/src/internal/utils/: mod.rs  rand.rs
auth/src/models/: common.rs  init.rs  mod.rs  permission.rs  role.rs  user_settings.rs  users.rs
auth/src/models/migration/: m20241201_000000_add_userinfo.rs  m20250713_000000_create_user_role.rs
auth/src/routers/: controllers.rs  cors.rs  response.rs
auth/src/routers/controllers/: actions.rs  auth.rs  common.rs  users.rs
auth/src/routers/extractor/: guest.rs  json.rs  login.rs
auth/src/routers/middleware/: permission.rs
auth/src/routers/utils/: cookie.rs  mod.rs
auth/src/services/: mod.rs
auth/src/services/actions/: mod.rs  reset_password.rs  verify_email.rs
auth/src/services/auth/: forget_password.rs  login.rs  mod.rs  register.rs  reset_password.rs  verify_email.rs
auth/src/services/users/: delete.rs  info.rs  mod.rs  setting.rs  update.rs
crates/assets/: Cargo.toml
crates/cache/: Cargo.toml
crates/cache/src/: cache.rs  error.rs  lib.rs  moka.rs  redis.rs  tx.rs
crates/cache/src/drivers/: mod.rs  moka.rs  redis.rs
crates/cache/tests/: cache.rs
crates/core/: Cargo.toml
crates/crypto/: Cargo.toml
crates/crypto/src/password/: mod.rs  salt.rs
crates/crypto/src/password/algorithm/: argon2id.rs  mod.rs  sha2.rs
crates/entities/: Cargo.toml
crates/jwt/: Cargo.toml
crates/jwt/src/: lib.rs
crates/migrations/: Cargo.toml
crates/repository/: Cargo.toml
crates/services/: Cargo.toml
crates/shared/: Cargo.toml
crates/token/: Cargo.toml
crates/token/src/: backend.rs  error.rs  lib.rs
crates/token/src/services/: mod.rs  password_reset.rs  register_token.rs  session.rs
crates/token/tests/: services.rs
crates/validator/: Cargo.toml
crates/validator/src/: lib.rs
public/: index.html
src/: assets.rs  init.rs  lib.rs  main.rs  routers.rs  state.rs
src/internal/: error.rs  mail.rs  mod.rs  validator.rs
src/internal/auth/: login.rs
src/internal/config/: common.rs  mod.rs  structure.rs
src/internal/extractor/: guest.rs  json.rs  login.rs  mod.rs  operator.rs
src/internal/log/: layer.rs  mod.rs  visitor.rs
src/internal/serializer/: common.rs  error.rs  mod.rs
src/internal/session/: model.rs  service.rs
src/internal/utils/: cookie.rs  jwt.rs  mod.rs  password.rs  rand.rs  session.rs
src/internal/validator/: mod.rs
src/middleware/: permission.rs
src/models/: common.rs  init.rs  mod.rs  permission.rs  role.rs  role_permissions.rs  user_info.rs  user_role.rs  user_settings.rs  users.rs
src/models/migration/: m20241010_000000_create_table.rs  m20241201_000000_add_userinfo.rs  m20250709_000000_create_premission_role.rs  mod.rs  (+2 more)
src/routers/: response.rs
src/services/: error.rs  mod.rs  users.rs
validate/: Cargo.toml
validate/src/: traits.rs  types.rs
(+29 files in other folders)
