[workspace]
members = [
    "crates/core",
    "crates/entities",
    "crates/migrations",
    "crates/repository",
    "crates/services",
    "crates/shared",
]

[workspace.package]
license = "Apache-2.0"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
axum = "0.8"
tower = { version = "0.5", features = ["full"] }

serde = "1.0"
serde_json = "1.0"
toml = "0.8"

tokio = { version = "1", features = ["full"] }
