[package]
name = "madoka_auth"
version = "0.1.0-alpha"
edition = "2024"

[lib]
name = "madoka_auth_lib"

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.83"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

axum = "0.7"
axum-extra = { version = "0.9.4", features = ["cookie"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

sea-orm = { version = "1.0.1", features = [
    "sqlx-all",
    "runtime-tokio-native-tls",
    "macros",
] }
sea-orm-migration = "1.0.1"
redis = { version = "0.27.5", features = ["tokio-native-tls-comp"] }

sha2 = "0.10.8"
base16ct = { version = "0.2.0", features = ["alloc"] }
rand = "0.8.5"

chrono = "0.4.38"
colored = "2.1.0"
jsonwebtoken = "9.3.0"
uuid = { version = "1.11.0", features = ["v4"] }
