[package]
name = "madoka_auth"
version = "0.1.0-alpha"
description = "A simple auth system."
authors = ["Grass Development Team"]
repository = "https://github.com/Grass-Development-Team/auth"
license = "Apache-2.0"
edition = "2024"

[dependencies]
anyhow = "1.0"

tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"

axum = "0.8"
axum-extra = { version = "0.10", features = ["cookie"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
regex = "1"

sea-orm = { version = "1.1", features = [
    "sqlx-all",
    "runtime-tokio-native-tls",
    "macros",
    "with-uuid",
] }
sea-orm-migration = "1.1"
redis = { version = "0.27.5", features = ["tokio-native-tls-comp"] }

sha2 = "0.10.8"
base16ct = { version = "0.2.0", features = ["alloc"] }
rand = "0.8.5"

chrono = "0.4"
colored = "3"
jsonwebtoken = "9.3.1"
uuid = { version = "1.16.0", features = ["v4"] }

lettre = "0.11.15"
