[package]
name = "auth"
version.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true

tokio.workspace = true
async-trait.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
time.workspace = true
colored.workspace = true

axum.workspace = true
axum-extra.workspace = true
tower.workspace = true
tower-http.workspace = true

serde.workspace = true
serde_json.workspace = true
toml.workspace = true
regex.workspace = true
minijinja.workspace = true

sea-orm.workspace = true
sea-orm-migration.workspace = true
redis.workspace = true

sha2.workspace = true
base16ct.workspace = true
rand.workspace = true

jsonwebtoken.workspace = true
uuid.workspace = true

lettre.workspace = true

assets.workspace = true
validator.workspace = true
