[package]
name = "cache"
version.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde_json.workspace = true
tokio.workspace = true
redis.workspace = true
deadpool-redis.workspace = true
moka.workspace = true
